2009-10-05  Doug Kwan  <dougkwan@google.com>

	PR rtl-optimization/41574
	Index: combine.c (distribute_and_simplify_rtx): Quit if RTX mode is
	floating point and we are not doing unsafe math optimizations.

2009-10-03  Simon Baldwin  <simonb@google.com>
	    Cary Coutant  <ccoutant@google.com>
	    Rafael Espindola  <espindola@google.com>
	    Richard Guenther  <rguenther@suse.de>
	    Jan Hubicka  <jh@suse.cz>
	    Doug Kwan <dougkwan@google.com>
	    H.J. Lu  <hongjiu.lu@intel.com> 
	    Bill Maddox  <maddox@google.com>
	    Ryan Mansfield  <rmansfield@qnx.com>
	    Diego Novillo  <dnovillo@google.com>
	    Ollie Wild  <aaw@google.com>
	    Kenneth Zadeck <zadeck@naturalbridge.com>

	* lto-cgraph.c: New file.
	* lto-compress.c: New file.
	* lto-compress.h: New file.
	* lto-opts.c: New file.
	* lto-section-in.c: New file.
	* lto-section-out.c: New file.
	* lto-streamer-in.c: New file.
	* lto-streamer-out.c: New file.
	* lto-streamer.c: New file.
	* lto-streamer.h: New file.
	* lto-symtab.c: New file.
	* lto-wpa-fixup.c: New file.
	* lto-wrapper.c: New file.

2009-10-03  Simon Baldwin  <baldwin@google.com>
	    Ben Elliston  <bje@au.ibm.com>
	    Rafael Espindola  <espindola@google.com>
	    Nathan Froyd  <froydnj@codesourcery.com>
	    Jan Hubicka  <jh@suse.cz>
	    Doug Kwan  <dougkwan@google.com>
	    Diego Novillo  <dnovillo@google.com>
	    Kenneth Zadeck  <zadeck@naturalbridge.com>

	* Makefile.in (enable_lto): New.
	(site.exp): If @enable_lto@ is set to 'yes' define
	ENABLE_LTO.
	(LINKER_PLUGIN_API_H): Define.
	(LTO_SYMTAB_H): Define.
	(LTO_STREAMER_H): Define.
	(TREE_VECTORIZER_H): Define.
	(INCLUDES): Add LIBELFINC.
	(OBJS-common): Add lto-cgraph.o, lto-streamer-in.o,
	lto-streamer-out.o, lto-section-in.o, lto-section-out.o,
	lto-symtab.o, lto-opts.o, lto-streamer.o, lto-wpa-fixup.o,
	lto-compress.o.
	(MOSTLYCLEANFILES): Add lto-wrapper$(exeext)
	(native): Add lto-wrapper$(exeext)
	(lto-compress.o, lto-cgraph.o, lto-streamer-in.o,